finalized swagger, added tests, verified e2e
